<resources>
    <string name="app_name">Skrawek</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="button_sign_in">Sign in</string>
    <string name="background_image">image</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="logo">logo</string>
    <string name="title_finances">Finances</string>
    <string name="title_absence">Absence</string>
    <string name="title_account">Account</string>
    <string name="children_name_surname">Antoni Nowaczek</string>
    <string name="children_image">image for children</string>
    <string name="icon_select">icon to select</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Account fragment -->
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="address">Address</string>
    <string name="postal_code">Postal code</string>
    <string name="street_number">Street number</string>
    <string name="city">City</string>
    <string name="phone">Phone</string>
    <string name="status">Status</string>
    <string name="email">Email</string>
    <string name="account_status">Account status</string>
    <string name="profile_icon_desc">Profile icon</string>
    <string name="child_list_name_surname">Antoni Nowakowski</string>
    <string name="child_list_pesel">95081105694</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="payment_type">Payment Type</string>
    <string name="transaction_amount">Transaction Amount</string>
    <string name="transaction_currency">Transaction Currency</string>
    <string name="titile">Titile</string>
    <string name="contractor_details">Contractor Details</string>
    <string name="finances_information">Finances information</string>
    <string name="receivables">Receivables</string>
    <string name="balance">Balance</string>
    <string name="liabilities">Liabilities</string>
    <string name="pln">PLN</string>
    <string name="events_calendar">Selected event: </string>
    <string name="name_surname">Name Surname</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="history_payments">History payments</string>
    <string name="none">None</string>
    <string name="list_absences">List absences</string>
    <string name="account_profile">Account Profile</string>
    <string name="date_absence_item">Date</string>
    <string name="reason_absence_item">Reason</string>
    <string name="currency_icon">Currency icon</string>
</resources>
