<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="pl.edu.pjatk.pamo.skrawek.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_finances"
        android:name="pl.edu.pjatk.pamo.skrawek.ui.finances.FinancesFragment"
        android:label="@string/title_finances"
        tools:layout="@layout/finances_fragment" />
    <fragment
        android:id="@+id/navigation_absence"
        android:name="pl.edu.pjatk.pamo.skrawek.ui.absence.AbsenceFragment"
        android:label="@string/title_absence"
        tools:layout="@layout/absence_fragment" />
    <fragment
        android:id="@+id/navigation_account"
        android:name="pl.edu.pjatk.pamo.skrawek.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/account_fragment" />

</navigation>